[project]
name = "lotus"
version = "0.0.1"
description = "A lightweight JAX reinforcement learning library"
authors = [
    {name = "Alex Goddard", email = ""},
]
dependencies = [
    "jax==0.4.35",
    "flax==0.9.0",
    "chex==0.1.87",
    "optax==0.2.4",
    "distrax==0.1.5",
    "gymnax==0.0.8",
    
]
requires-python = "==3.10"
readme = "readme.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true